minor changes to list item

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li>Biking - Mountain and Road</li>
             <li>Snowboarding (sometimes too much)</li>
             <li>Photography</li>
+            <li>rock climbing</li>
+            <li>cooking</li>
         </ol>
     </body>
 </html>
